--- a/transfercnn.ipynb
+++ b/transfercnn.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -144,10 +144,14 @@
       "                                                                 \n",
       " block5_pool (MaxPooling2D)  (None, 1, 1, 512)         0         \n",
       "                                                                 \n",
+      " flatten (Flatten)           (None, 512)               0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 82)                42066     \n",
+      "                                                                 \n",
       "=================================================================\n",
-      "Total params: 20,024,384\n",
+      "Total params: 20,066,450\n",
       "Trainable params: 0\n",
-      "Non-trainable params: 20,024,384\n",
+      "Non-trainable params: 20,066,450\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -1623,7 +1627,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "model.save('model1');"
+   ],
    "metadata": {
     "collapsed": false
    }
